1134838813	Bug behoben: Wenn man aus einer Allianz austrat, wurde die Allianz in der Karte und in den Highscores nicht entfernt.
1134789434	Bei veröffentlichten Kampfberichten werden jetzt die Koordinaten entfernt.
1134683887	Je inaktiver ein Benutzer ist, desto schwächer wirken seine Rohstoffe ab jetzt in den Handelskurs ein.
1134599349	Option „Externe Navigationslinks“ hinzugefügt.
1134479141	Wenn man eine Flotte langsamer losschickte, kam sie entsprechend schneller zurück.
1134330847	Abschaltbare Werbung eingebaut, wollen wir sehen, ob es sich lohnt.
1134249180	Rohstoffproduktion im Imperium nun auch für x Tage berechnebar.
1134247707	Neue Versionsnummer: 0.1.3
1134247705	Neues Feature: Imperium.
1134227596	Neue Versionsnummer: 0.1.2
1134227595	Allianzhighscores eingebaut.
1134173858	Neue Versionsnummer: 0.1.1
1134173856	Gründliche Bugs im Flottensystem behoben, die definitiv auch zur Flottenverdopplung beigetragen haben.
1133910834	Wenn man Verbündete über die Karte ausspioniert, wird jetzt ebenfalls nur noch eine Spionagesonde geschickt.
1133724452	Neue Versionsnummer: 0.1.0
1133724450	Allianzsystem eingebaut.
1133382639	Kleinen großen Sicherheitsbug behoben, hoffen wir, dass Flottenverdopplung daran lag.
1133272683	Neue Versionsnummer: 0.0.8
1133271233	Man kann nun auch HTML-Code in die Benutzerbeschreibung schreiben.
1133267166	Noobschutz gilt nun auch für Spionage.
1133220611	Berühmt-berüchtigten Highscores-Bug endlich gefunden und behoben.
1133047506	Neue Versionsnummer: 0.0.7
1133047504	Neues Feature: Man kann Nachrichten jetzt veröffentlichen.
1133042054	Neue Versionsnummer: 0.0.6
1133042051	Neues Feature: Im Planet-umbenennen-Menü kann man die Reihenfolge seiner Planeten individuell festlegen.
1133008471	Verbaute Rohstoffe zählen jetzt nicht mehr in den Handelskurs hinein, es werden nur noch vorhandene Rohstoffe benutzt.
1133002644	Neue Versionsnummer: 0.0.5
1133002641	Besserer DB-Locking-Mechanismus, hoffen wir, dass dieser ein paar Bugs behebt.