@@ -1,3 +1,6 @@
+1134852860	Neue Versionsnummer: 0.1.4
+1134852857	Es werden jetzt zwei separate Allianzhighscores für Gesamtpunkte und Punkteschnitt geführt.
+1134846969	Die Highscores werden jetzt in Seiten à 100 Plätze eingeteilt.
 1134838813	Bug behoben: Wenn man aus einer Allianz austrat, wurde die Allianz in der Karte und in den Highscores nicht entfernt.
 1134789434	Bei veröffentlichten Kampfberichten werden jetzt die Koordinaten entfernt.
 1134683887	Je inaktiver ein Benutzer ist, desto schwächer wirken seine Rohstoffe ab jetzt in den Handelskurs ein.
